syntax = "proto3";
service Booking {
  rpc GetListBooking(EmptyBooking) returns (stream BookingData) {}
  rpc GetBookingByUserID(BookingUserID) returns (stream BookingData) {}
  rpc PostBooking(BookingData) returns (EmptyBooking) {}
  rpc PutBooking(BookingData) returns (EmptyBooking) {}
  rpc DeleteBooking(BookingData) returns (EmptyBooking){}
}
message BookingUserID {
  string userid = 1;
}
message BookingData {
  string BookingUserID = 1;
  string date = 2;
  string movies = 3;
}
message EmptyBooking {
}


